# sqlmodel-plus

./: .pre-commit-config.yaml  README.md  pyproject.toml
sqlmodel_plus/: __init__.py  sqlmodel_plus.py
tests/: test_extended_methods.py  test_set_engine.py
