[tool.poetry]
name = "sqlmodel-plus"
version = "0.1.1"
description = "Extend SQLModel functionalities."
authors = ["Soami Charan <charansoami@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlmodel_plus"}]

[tool.poetry.dependencies]
sqlmodel = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
httpx = "^0.25.1"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
