[tool.poetry]
name = "sqlmodel-plus"
version = "0.2.2"
description = "Extend SQLModel functionalities."
authors = ["Soami Charan <charansoami@gmail.com>"]
readme = "README.md"
packages = [{include = "sqlmodel_plus"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlmodel = "^0.0.14"

[tool.poetry.group.test.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
